--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
 </div>
 
 <style>
-.center{
+.center {
     text-align: center;
     margin-top: 8em;
+}
+h1 {        
+    color: #444;
+    font-weight: 100;
 }
 </style>
 <script>
