--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
         Hello world!
     </h1>
     <i>:3</i>
+    <br>
+<iframe src="//coub.com/embed/582o5?muted=false&autostart=false&originalSize=false&startWithHD=false" allowfullscreen="true" frameborder="0" width="640" height="360"></iframe>
 </div>
 
 <style>
 .center {
     text-align: center;
     margin-top: 8em;
+    margin-left: auto;
+    margin-right: auto;
 }
 h1 {        
     color: #444;
