--- a/single-price-grid-component-master/index.html
+++ b/single-price-grid-component-master/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="mystyle.css" />
   </head>
   <body>
+    <div class="fix_footer">
     <div class="Aligner">
     <div class="content">
       <div class="join">
@@ -62,14 +63,16 @@
         </ul>
       </div>
     </div>
+   
   </div>
-    <footer>
-      <p class="attribution">
-        Challenge by
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-          >Frontend Mentor</a
-        >. Coded by <a href="#">Ihor Horobets</a>.
-      </p>
-    </footer>
+</div>
+  <footer>
+  <p class="attribution">
+    Challenge by
+    <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+      >Frontend Mentor</a
+    >. Coded by <a href="#">Ihor Horobets</a>.
+  </p>
+</footer>
   </body>
 </html>
