--- a/fylo-landing-page/index.html
+++ b/fylo-landing-page/index.html
@@ -118,6 +118,7 @@
         <img class="logo" src="images/logo-white.svg" />
         <div class="columns">
           <div class="column contacts">
+          <div>
             <div class="phone">
               <img src="images/icon-phone.svg" />
               Phone: +1-543-123-4567
@@ -126,6 +127,8 @@
               <img src="images/icon-email.svg" />
               example@fylo.com
             </div>
+          </div>
+            
           </div>
           <div class="column">
             <ul>
@@ -156,7 +159,7 @@
           </ul>
           </div>
 
-          <div class="column">
+          <div class="column icons">
             icons
           </div>
         </div>
