--- a/fylo-landing-page/index.html
+++ b/fylo-landing-page/index.html
@@ -44,11 +44,7 @@
           </li>
         </ul>
       </div>
-      <div class="files clearfix">
-        <div class="image">
-          <img src="images/illustration-1.svg" />
-        </div>
-
+      <div class="files">
         <div class="email">
           <h1>All your files in one secure location, accessible anywhere.</h1>
 
@@ -66,6 +62,9 @@
             />
             <button type="submit" class="get_started">Get Started</button>
           </form>
+        </div>
+        <div class="image">
+          <img src="images/illustration-1.svg" />
         </div>
       </div>
       <div class="line"></div>
